# ewcig

./: .replit  TAURI_BUILD_INSTRUCTIONS.md  package-lock.json  package.json  replit.md
client/: index.html
client/src/: App.tsx  index.css
client/src/components/dashboard/: pc-grid.tsx  stats-card.tsx
client/src/components/dialogs/: add-game-dialog.tsx  add-member-dialog.tsx  top-up-dialog.tsx
client/src/components/layout/: main-layout.tsx  sidebar.tsx
client/src/hooks/: use-tauri-games.ts
client/src/pages/: client-generator.tsx  dashboard.tsx  games.tsx  launcher-settings.tsx  launcher.tsx  login.tsx  members.tsx  reports.tsx  settings.tsx  store.tsx  terminals.tsx
server/: routes.ts  storage.ts
shared/: schema.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tauri-launcher/: .env.example  README.md  build-installer.bat  index.html  package.json  tailwind.config.js
tauri-launcher/src/: App.tsx  index.css
tauri-launcher/src-tauri/: Cargo.toml  tauri.conf.json
tauri-launcher/src-tauri/src/: main.rs
